# weavefra

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_output.txt
include/: global_platform.h
weavefra-lib/: CMakeLists.txt
weavefra-lib/src/: WFpch.cpp  WFpch.h  weavefra.h
weavefra-lib/src/weavefra/: CoreDefined.h  windowslib.cpp  windowslib.h
weavefra-lib/src/weavefra/Core/: Asserts.cpp  Asserts.h  CoreDefined.h  global_platform.h  logger.cpp  logger.h  mathtool.h
weavefra-lib/src/weavefra/Core/Application/: Application.cpp  Application.h
weavefra-lib/src/weavefra/Core/EventBus/: EventBus.cpp  EventBus.h  EventType.h  GlobalEventBus.h
weavefra-lib/src/weavefra/Core/Memory/: memory.cpp  memory.h  memory_system.h
weavefra-lib/src/weavefra/Core/windowlib/: windowlib.cpp  windowlib.h
weavefra-lib/src/weavefra/platform/: platform.h
weavefra-lib/src/weavefra/platform/UNIX/: platfrom_unix.cpp
weavefra-lib/src/weavefra/platform/Windows/: WindowsWindow.cpp  WindowsWindow.h  platform_win_console.cpp  platfrom_win.cpp  platfrom_win_window.cpp
weavefra-lib/src/weavefra/windowslib/: windowslib.cpp  windowslib.h
weavefra-previewer/: CMakeLists.txt
weavefra-previewer/src/: ApplicationSandbox.cpp  ApplicationSandbox.h  main.cpp
weavefra-sandbox/: CMakeLists.txt
weavefra-sandbox/src/: ApplicationSandbox.cpp  ApplicationSandbox.h  main.cpp
